added kubejs as a dependency for testing purposes

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,7 @@ mod_version=1.0.0
 mod_group_id=dev.trinsdar
 mod_authors=Trinsdar
 mod_description=Just a simple port of the clipboard from bibliocraft to modern versions.
+
+kubejs_version=2001.6.5-build.17
+rhino_version=2001.2.3-build.10
+architectury_version=9.2.14
