--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,19 @@ group = mod_group_id
 
 repositories {
     mavenLocal()
+    maven {
+        url "https://maven.latvian.dev/releases"
+        content {
+            includeGroup "dev.latvian.mods"
+        }
+    }
+    maven {
+        // Shedaniel's maven (Architectury API)
+        url = "https://maven.architectury.dev"
+        content {
+            includeGroup "dev.architectury"
+        }
+    }
 }
 
 base {
@@ -102,6 +115,10 @@ legacyForge {
 }
 
 dependencies {
+    modImplementation("dev.latvian.mods:kubejs-forge:${kubejs_version}")
+
+    modImplementation("dev.latvian.mods:rhino-forge:${rhino_version}")
+    modImplementation("dev.architectury:architectury-forge:${architectury_version}")
 }
 
 processResources{
