--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -6,7 +6,5 @@ protected net.minecraft.client.gui.components.EditBox f_94092_ # font
 protected net.minecraft.client.gui.components.EditBox f_94093_ # value
 protected net.minecraft.client.gui.components.EditBox f_94095_ # frame
 protected net.minecraft.client.gui.components.EditBox f_94091_ # formatter
-protected net.minecraft.client.gui.components.EditBox f_256828_ # hint
-protected net.minecraft.client.gui.components.EditBox f_94088_ # suggestion
 public net.minecraft.client.gui.components.EditBox m_94216_()I # getMaxLength
-public net.minecraft.client.gui.components.EditBox m_264315_(Lnet/minecraft/client/gui/GuiGraphics;IIII)V # renderHighlight
+public net.minecraft.client.gui.components.EditBox m_94135_(IIII)V # renderHighlight
